--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'helpers/reset';
+@import 'helpers/fonts';
+
+body, html {
+  margin: 0 auto;
+  border: 1px solid;
+  border-radius: 20px;
+  overflow: hidden;
+}
+* {
+  max-width: 500px;
+  box-sizing: border-box;
+  font-family: 'Halvar Mittel Rg', sans-serif;
+}
