--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -33,7 +33,7 @@
         align-items: center;
 
         .form__label {
-          font-family: 'Roboto', sans-serif;
+          font-family: 'Halvar Mittel XTh', sans-serif;
           font-size: 0.8rem;
           margin-left: 1rem;
           margin-top: 0.7rem;
@@ -43,7 +43,7 @@
         }
 
         .form__input {
-          font-family: 'Roboto', sans-serif;
+          font-family: 'Halvar Mittel XTh', sans-serif;
           color: #333;
           font-size: 0.8rem;
           margin: 0 auto;
