--- a/src/app/components/main/components/chat/chat.component.html
+++ b/src/app/components/main/components/chat/chat.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <header>
-    <h1>Чат тех. поддержки</h1>
+    <img src="assets/img/full-logo.png" alt="full-logo">
+    <h1>Чат технической поддержки</h1>
   </header>
   <main>
     <ul class="chat-list">
