--- a/src/app/components/main/components/info/info.component.html
+++ b/src/app/components/main/components/info/info.component.html
@@ -2,21 +2,26 @@
   <div class="logo">
     <img src="assets/img/full-logo.jpg" alt="logo">
   </div>
-  <div class="user-photo">
-    <img src="assets/img/builder.jpg" alt="user">
+  <div class="user-data">
+    <div class="user-photo">
+      <img src="assets/img/builder.jpg" alt="user">
+    </div>
+    <div class="user-info">
+      <ul class="user-info-list">
+        <li class="info-list">
+          <h2>Ф.И.О:</h2>
+          <p>Морозов Алексей Евгениевич</p>
+        </li>
+        <li class="info-list">
+          <h2>Должность:</h2>
+          <p>Бригадир</p>
+        </li>
+        <li class="info-list">
+          <h2>Разряд:</h2>
+          <p>5</p>
+        </li>
+      </ul>
+
+    </div>
   </div>
 </header>
-<main>
-  <div class="info">
-    <ul class="info-list">
-      <li class="list">
-        <h2>Должность:</h2>
-        <p>Бригадир</p>
-      </li>
-      <li class="list">
-        <h2>Разряд:</h2>
-        <p>5</p>
-      </li>
-    </ul>
-  </div>
-</main>
