--- a/src/app/components/main/components/chat/chat.component.scss
+++ b/src/app/components/main/components/chat/chat.component.scss
@@ -24,17 +24,25 @@ span {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
 
   header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0e7ac1;
     padding: 30px 20px;
+    gap: 16px;
+    background-color: #111e32;
+
+    img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      box-shadow: rgba(255, 255, 255, 0.35) 0 0 5px;
+    }
 
     h1 {
-      font-family: "Halvar Mittel XTh";
+      font-family: "Halvar Mittel Rg";
       color: white;
       font-size: 24px;
     }
