--- a/src/app/components/main/components/notification/notification.component.scss
+++ b/src/app/components/main/components/notification/notification.component.scss
@@ -14,7 +14,7 @@ h2 {
   flex-direction: column;
   overflow-y: auto;
   padding: 40px 20px;
-  gap: 8px;
+  gap: 16px;
   flex-wrap: wrap;
   min-width: 100%;
 
@@ -24,10 +24,11 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    background-color: rgba(62, 62, 62, .03);
+    background-color: #111e32;
+    color: white;
     width: 100%;
-  }
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  }
 }
