--- a/src/app/components/qr-scanner/qr-scanner.component.html
+++ b/src/app/components/qr-scanner/qr-scanner.component.html
@@ -4,8 +4,10 @@
     <img src="assets/img/full-logo.jpg" alt="logo">
   </div>
 
-  <div id="reader"
-       class="qr-reader">
+  <div class="div">
+    <div id="reader" style="width: 250px; height: 250px;"></div>
+    <button (click)="startScanner()" class="styled-button">Start QR Code Scanner</button>
+    <button (click)="stopScanner()" class="styled-button">Stop QR Code Scanner</button>
   </div>
   <footer>
     <p> Отсканируйте QR код пожалуйста</p>
