--- a/src/app/components/main/components/notification/notification.component.scss
+++ b/src/app/components/main/components/notification/notification.component.scss
@@ -27,8 +27,8 @@ h2 {
     padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    background-color: #111e32;
+    background-color: rgba(255, 255, 255, 0.24);
     color: white;
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  }
+  }
 }
