--- a/src/app/components/main/components/task/task.component.scss
+++ b/src/app/components/main/components/task/task.component.scss
@@ -1,6 +1,5 @@
 :host {
-  height: 100vh;
-  background-color: #111e32;
+  display: contents;
 }
 
 h2 {
@@ -18,6 +17,7 @@ p {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   overflow-y: auto;
   gap: 10px;
   padding: 40px 20px;
@@ -46,7 +46,7 @@ p {
   }
 
   .list-progress, .list-over, .list-out {
-    width: 220px;
+    width: 400px;
     min-height: 150px;
     max-height: fit-content;
     border-radius: 10px;
