--- a/src/app/components/qr-scanner/qr-scanner.component.html
+++ b/src/app/components/qr-scanner/qr-scanner.component.html
@@ -4,10 +4,8 @@
     <img src="assets/img/full-logo.jpg" alt="logo">
   </div>
 
-  <div class="div">
-    <div id="reader" style="width: 250px; height: 250px;"></div>
-    <button (click)="startScanner()" class="styled-button">Start QR Code Scanner</button>
-    <button (click)="stopScanner()" class="styled-button">Stop QR Code Scanner</button>
+  <div id="reader"
+       class="qr-reader">
   </div>
   <footer>
     <p> Отсканируйте QR код пожалуйста</p>
