--- a/src/app/components/main/components/chat/chat.component.scss
+++ b/src/app/components/main/components/chat/chat.component.scss
@@ -21,7 +21,7 @@ span {
 }
 
 .container {
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
