--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -4,7 +4,7 @@
   flex-wrap: nowrap;
   overflow-y: auto;
   justify-content: space-between;
-  height: 100vh;
+  height: 100dvh;
   background-color: #111e32;
 
   footer {
