--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,7 @@
         <div class="button-submit-wrapper">
           <button class="submit-button" type="submit"
                   [routerLink]="'/qrcode'"
-                  [disabled]="loginForm.invalid">Login
+                  [disabled]="loginForm.invalid">Войти
           </button>
         </div>
       </div>
