--- a/src/app/components/main/components/task/task.component.html
+++ b/src/app/components/main/components/task/task.component.html
@@ -3,6 +3,9 @@
   <li class="list-progress" (click)="description = !description">
     <header>
       <h1>Ограждение территории</h1>
+      <button class="close-task">
+        <span>&#10004;</span>
+      </button>
     </header>
     <main>
       <p>Статус</p>
@@ -32,9 +35,12 @@
       </div>
     }
   </li>
-  <li class="list-over">
+  <li class="list-over" (click)="removeTask($event)">
     <header>
       <h1>Заливка фундамента</h1>
+      <button class="close-task">
+        <span>&#10004;</span>
+      </button>
     </header>
     <main>
       <p>Статус</p>
@@ -57,6 +63,9 @@
   <li class="list-out">
     <header>
       <h1>Уборка территории</h1>
+      <button class="close-task" >
+        <span>&#10004;</span>
+      </button>
     </header>
     <main>
       <p>Статус</p>
