--- a/src/app/components/main/components/task/task.component.scss
+++ b/src/app/components/main/components/task/task.component.scss
@@ -55,8 +55,23 @@ p {
     background-color: #111e32;
 
     header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       width: 100%;
       padding: 10px 20px;
+
+      .close-task {
+        border: white;
+        border-radius: 50%;
+        padding: 5px 7px;
+        background-color: white;
+        cursor: pointer;
+
+        span {
+          color: #2a9df4;
+        }
+      }
 
       h1 {
         font-family: "Halvar Mittel Bd", sans-serif;
